fix text align

--- a/src/pages/Footer/Footer.scss
+++ b/src/pages/Footer/Footer.scss
@@ -19,6 +19,12 @@
   }
 }
 
+.wrap {
+  p {
+    text-align: center;
+  }
+}
+
 @media (max-width: 768px) {
   .footer {
     height: 500px;
@@ -36,9 +42,6 @@
   .wrap {
     top: 100px;
     flex-direction: column;
-    p {
-      text-align: center;
-    }
     .social,
     .resurs {
       display: flex;
